--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@
     --color-custom-green: var(--custom-green);
     --color-custom-green-100: var(--custom-green-100);
     --color-custom-green-200: var(--custom-green-200);
+    --color-custom-green-300: var(--custom-green-300);
 }
 
 :root {
@@ -80,6 +81,7 @@
     --custom-green: #a3e635;
     --custom-green-100: #a3e63533;
     --custom-green-200: #82c34133;
+    --custom-green-300: #82c341;
 }
 
 .dark {
